Wrong (old) package name in usage help